[gd_scene load_steps=15 format=3 uid="uid://dn43a3o2p7r30"]

[ext_resource type="Script" uid="uid://b83bhlv50qfco" path="res://addons/deers_time_plugin/ui/deers_timer_panel_container.gd" id="1_y55xf"]
[ext_resource type="Texture2D" uid="uid://b5heotoqr71ws" path="res://addons/deers_time_plugin/icon/right-expand.svg" id="2_kbwm6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kbwm6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_crin8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_63rm1"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4phol"]
content_margin_left = 4.0
content_margin_bottom = 4.0
bg_color = Color(5.0056e-06, 0.702134, 0.561252, 1)
corner_radius_top_left = 16
corner_radius_bottom_left = 16
anti_aliasing_size = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_crin8"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kwfud"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 0.324471, 0.403829, 1)
corner_radius_top_right = 16
corner_radius_bottom_right = 16
anti_aliasing_size = 10.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sitmp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1akak"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kpklm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_76nkv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oeh08"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_torjw"]

[node name="DeersTimerPanelContainer" type="PanelContainer"]
custom_minimum_size = Vector2(500, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -251.0
offset_top = -24.0
offset_right = 251.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_kbwm6")
script = ExtResource("1_y55xf")

[node name="StopTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 5.0

[node name="OpenTimer" type="Timer" parent="."]
unique_name_in_owner = true
autostart = true

[node name="ProjectVBoxContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="OpenProjectTimeLabel" type="Label" parent="ProjectVBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "23 : 59 : 15"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="ProjectVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_crin8")

[node name="UseProgressBar" type="ProgressBar" parent="ProjectVBoxContainer/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 36)
layout_mode = 2
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxFlat_63rm1")
theme_override_styles/fill = SubResource("StyleBoxFlat_4phol")
value = 50.0
show_percentage = false

[node name="UnUseProgressBar" type="ProgressBar" parent="ProjectVBoxContainer/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 36)
layout_mode = 2
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxFlat_crin8")
theme_override_styles/fill = SubResource("StyleBoxFlat_kwfud")
value = 50.0
fill_mode = 1
show_percentage = false

[node name="HideAndShowButton" type="Button" parent="ProjectVBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_sitmp")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_1akak")
theme_override_styles/hover = SubResource("StyleBoxEmpty_kpklm")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_76nkv")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_oeh08")
theme_override_styles/focus = SubResource("StyleBoxEmpty_torjw")
icon = ExtResource("2_kbwm6")
icon_alignment = 1

[node name="AddTimerButton" type="Button" parent="ProjectVBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_sitmp")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_1akak")
theme_override_styles/hover = SubResource("StyleBoxEmpty_kpklm")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_76nkv")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_oeh08")
theme_override_styles/focus = SubResource("StyleBoxEmpty_torjw")
text = "+"

[connection signal="timeout" from="StopTimer" to="." method="_on_stop_timer_timeout"]
[connection signal="timeout" from="OpenTimer" to="." method="_on_open_timer_timeout"]
[connection signal="pressed" from="ProjectVBoxContainer/HideAndShowButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ProjectVBoxContainer/AddTimerButton" to="." method="_on_add_timer_button_pressed"]
